Adjusted to check language3[0] only and ignore the summary return. Currently the is_valid_language check is on the summary language.

I'm trying to fix what seems to be a bug introduced here:
https://codereview.chromium.org/1263613002

When that change switched from the summary language to language3[0] (The
description shows this was intentional, with "Edit CLD2 result to return top
language instead of summary language.")

When mcindy@ switched from summary language to top language, shouldn't they have
also used that language to validate unknownness? I don't understand why you
currently want to check the summary language when you're returning the
language3[0] as the result.

BUG=599940

Review-Url: https://codereview.chromium.org/1849323002
Cr-Commit-Position: refs/heads/master@{#391255}

Former-commit-id: 80f25b767e1a4b060f085b82e32f016ea4db881e